<resources>

    <string name="app_name">Learn Easy Bangla</string>


    <string name="category_phrases">Phrases</string>


    <string name="category_colors">Colors</string>
    <string name="category_alphabets">Alphabets</string>

    <string name="category_numbers">Numbers</string>


    <string name="category_family">Family</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_tab_layout">TabLayout</string>
</resources>
