<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
    android:weightSum="10"
   >

<GridLayout
    android:columnCount="2"
    android:rowCount="3"
    android:alignmentMode="alignMargins"
    android:columnOrderPreserved="false"
    android:layout_weight="10"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:padding="14dp"
    tools:targetApi="ice_cream_sandwich">

   <android.support.v7.widget.CardView

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
         app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
       >
       <!--row 1 column 1-->
       <LinearLayout

          android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        >
           <ImageView

               android:src="@drawable/numbers"
               android:layout_width="68dp"
               android:layout_height="60dp"
               android:gravity="center_horizontal" />

           <TextView
               android:id="@+id/numbers"
               android:textAlignment="center"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:width="50dp"
               android:text="@string/category_numbers"
               android:textSize="18sp"
               android:layout_gravity="center_horizontal" />


</LinearLayout>
   </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        tools:targetApi="lollipop">
        <!--row 1 column 1-->
        <LinearLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView

                android:src="@drawable/family"
                android:layout_width="68dp"
                android:layout_height="60dp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/family"
                android:textAlignment="center"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/category_family"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>


    </android.support.v7.widget.CardView>

    <!--row 2-->
    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        tools:ignore="UnusedAttribute">
        <!--row 1 column 1-->
        <LinearLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          >
            <ImageView
                android:src="@drawable/colors"
                android:layout_width="68dp"
                android:layout_height="60dp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/colors"
                android:textAlignment="center"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/category_colors"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        tools:ignore="UnusedAttribute">
        <!--row 1 column 1-->
        <LinearLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >
            <ImageView
                android:src="@drawable/phrases"
                android:layout_width="68dp"
                android:layout_height="60dp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/phrases"
                android:textAlignment="center"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/category_phrases"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        tools:ignore="UnusedAttribute">
        <!--row 1 column 1-->

        <LinearLayout

            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          >
            <ImageView
                android:src="@drawable/alphabets"
                android:layout_width="78dp"
                android:layout_height="60dp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/alphabets"
                android:textAlignment="center"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="@string/category_alphabets"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        >
            <ImageView
                android:src="@drawable/others"
                android:layout_width="68dp"
                android:layout_height="60dp"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/others"
                android:textAlignment="center"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:width="50dp"
                android:text="Others"
                android:textSize="18sp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

</GridLayout>

</LinearLayout>
